# MLOps-Lab3

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  app.py  mlflow.db  model.onnx  pyproject.toml  requirements.txt
.github/workflows/: CICD.yml
api/: fastapi_main.py
cli/: cli.py
mylib/: inference.py  model.py  run_all.py  select_best_model.py  serialize_best_model.py  train.py
templates/: home.html
templates/.ipynb_checkpoints/: home-checkpoint.html
tests/: test_artifacts.py  test_cli.py  test_fastapi_main.py  test_inference.py  test_model.py  test_select_model.py  test_train.py
tests/.ipynb_checkpoints/: test_cli-checkpoint.py  test_fastapi_main-checkpoint.py  test_model-checkpoint.py
