[project]
name = "lab-3"
version = "0.1.0"
description = "Repository for Lab3 assignment of the Mlops: production-ready machine learning course."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "click>=8.3.1",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "torch>=2.2.0",
    "torchvision>=0.16.0",
    "mlflow>=2.9.1",
    "onnx>=1.15.0",
    "onnxruntime>=1.15.1",
    "matplotlib>=3.8.0"
]
